[gd_scene load_steps=9 format=2]

[ext_resource path="res://LooneyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 3 )

[node name="LooneyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -27.4072 ],
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 384.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blackboard" type="Sprite" parent="Background"]
position = Vector2( 510, 303.5 )
scale = Vector2( 0.53125, 0.477743 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
rect_scale = Vector2( 1.00761, 1.00754 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_right = 976.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "Placeholder text
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 976.0
margin_bottom = 176.0
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 822.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 826.0
margin_right = 899.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 903.0
margin_right = 976.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
custom_fonts/font = SubResource( 3 )
text = "ok
"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
